@@ -61,7 +61,12 @@
                   _description="The pixel-aspect-ratio (Deprecated)" />
         <property name="is-square" type="bool"
                   _description="Whether to scale to a 1:1 pixel aspect ratio." />
-	<property name="deinterlacer" type="string" />
+	<property name="deinterlace-mode" type="string"
+                  _description="Deinterlace mode.(Default=auto)" />
+	<property name="deinterlace-method" type="string"
+                  _description="Deinterlace method.(Default=ffmpeg)" />
+	<property name="deinterlacer" type="string"
+                  _description="Deprecated" />
 	<!-- ignored, but kept for backward compatibility -->
 	<property name="pids" type="string" />
       </properties>
