@@ -3,6 +3,15 @@
 	reviewed by: Marc André Lureau
 
 	* flumotion/component/dvb/dvb.py:
+	* flumotion/component/dvb/dvb.xml:
+	Add 'deinterlace-mode' and deinterlace-method' properties and deprecate
+	'deinterlacer' property
+
+2010-07-07  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Marc André Lureau
+
+	* flumotion/component/dvb/dvb.py:
 	Add videorate effect
 
 2010-07-07  Marc André Lureau  <mlureau@flumotion.com>
